# 2024_DINO-SFML_Linux

./: CMakeLists.txt
include/: Background.h  Bird.h  Cactus.h  Cloud.h  Dinosaur.h  Game.h  Help.h  IAudioProvider.h  Interface.h  MainMenu.h  PauseScreen.h  SFMLSoundProvider.h  Save.h  ServiceLocator.h  SettingScreen.h  Settings.h  SoundFileCache.h  SplashScreen.h  VisibleGameObject.h  stdafx.h
src/: Background.cpp  Bird.cpp  Cactus.cpp  Cloud.cpp  Dinosaur.cpp  Game.cpp  Help.cpp  Interface.cpp  MainMenu.cpp  PauseScreen.cpp  SFMLSoundProvider.cpp  Save.cpp  ServiceLocator.cpp  SettingScreen.cpp  Settings.cpp  SoundFileCache.cpp  SplashScreen.cpp  VisibleGameObject.cpp  main.cpp
